storage: refactor static fields in SegmentIndexFactoryTest